@@ -11,7 +11,7 @@ importFrom("utils", "str")
 
 
 ### entry points for C code
-useDynLib(POT, .registration = TRUE)
+useDynLib(POT, .registration = TRUE, .fixes="POT_")
 
 
 ### Export
