@@ -76,7 +76,7 @@ rbvlog <- function(n, alpha, mar1 = c(0,1,0), mar2 = mar1){
   if(length(alpha) != 1 || mode(alpha) != "numeric" || alpha <= 0 ||
      alpha > 1) stop("invalid argument for `alpha'")
   
-  sim <- .C("do_rbvlog_shi", as.integer(n), as.double(alpha),
+  sim <- .C(POT_do_rbvlog_shi, as.integer(n), as.double(alpha),
             sim = double(2*n))$sim
   sim <- matrix(sim, nrow = n, ncol = 2, byrow = TRUE)
 
@@ -103,7 +103,7 @@ rbvalog <- function(n, alpha, asCoef1, asCoef2, mar1 = c(0,1,0),
     alpha <- 1
   }
   
-  sim <- .C("do_rbvalog_shi", as.integer(n), as.double(alpha),
+  sim <- .C(POT_do_rbvalog_shi, as.integer(n), as.double(alpha),
             as.double(asy), sim = double(2*n))$sim
   sim <- matrix(sim, nrow = n, ncol = 2, byrow = TRUE)
 
@@ -118,7 +118,7 @@ rbvnlog <- function(n, alpha, mar1 = c(0,1,0), mar2 = mar1){
   if(length(alpha) != 1 || mode(alpha) != "numeric" || alpha <= 0)
     stop("invalid argument for `alpha'")
   
-  sim <- .C("do_rbvnlog", as.integer(n), as.double(alpha),
+  sim <- .C(POT_do_rbvnlog, as.integer(n), as.double(alpha),
             sim = runif(2*n))$sim
   sim <- matrix(sim, nrow = n, ncol = 2, byrow = TRUE)
 
@@ -138,7 +138,7 @@ rbvanlog <- function(n, alpha, asCoef1, asCoef2, mar1 = c(0,1,0),
   if(length(alpha) != 1 || mode(alpha) != "numeric" || alpha <= 0)
     stop("invalid argument for `alpha'")
   
-  sim <- .C("do_rbvanlog", as.integer(n), as.double(alpha),
+  sim <- .C(POT_do_rbvanlog, as.integer(n), as.double(alpha),
             as.double(asy), sim = runif(2*n))$sim
   sim <- matrix(sim, nrow = n, ncol = 2, byrow = TRUE)
 
@@ -157,7 +157,7 @@ rbvmix <- function(n, alpha, mar1 = c(0,1,0), mar2 = mar1){
   if (alpha < 0)
     stop("``alpha'' must be non-negative")
 
-  sim <- .C("do_rbvmix", as.integer(n), as.double(alpha),
+  sim <- .C(POT_do_rbvmix, as.integer(n), as.double(alpha),
             sim = runif(2*n))$sim
   sim <- matrix(sim, nrow = n, ncol = 2, byrow = TRUE)
 
@@ -187,7 +187,7 @@ rbvamix <- function(n, alpha, asCoef, mar1 = c(0,1,0),
   if((alpha + 3*asCoef) < 0)
     stop("`alpha' + `3*asCoef' must be non-negative")
   
-  sim <- .C("do_rbvamix", as.integer(n), as.double(alpha),
+  sim <- .C(POT_do_rbvamix, as.integer(n), as.double(alpha),
             as.double(asCoef), sim = runif(2*n))$sim
   sim <- matrix(sim, nrow = n, ncol = 2, byrow = TRUE)
 
